updates to python lexer

--- a/src/CodeBuild/CodeBuild.fsproj
+++ b/src/CodeBuild/CodeBuild.fsproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Shared\\Lexer.fs" />
+    <Compile Include="Shared\\Tokens.fs" />
     <Compile Include="Python\\Tokens.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
